[gd_scene load_steps=6 format=1]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/pong.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/origami_pixel.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/pixel_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/pixel.fnt" type="BitmapFont" id=5]

[node name="Panel" type="Panel"]

visibility/self_opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 641.0
margin/bottom = 400.0
script/script = ExtResource( 1 )

[node name="game" parent="." instance=ExtResource( 2 )]

visibility/opacity = 0.2
visibility/behind_parent = true

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 129.0
margin/top = 81.0
margin/right = 510.0
margin/bottom = 119.0
custom_fonts/font = ExtResource( 3 )
text = "Kaos Pong"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menu" type="VBoxContainer" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 129.0
margin/top = 228.0
margin/right = 510.0
margin/bottom = 356.0
alignment = 0

[node name="single" type="Button" parent="menu"]

visibility/self_opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 381.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Single Player"
flat = true

[node name="versus" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 33.0
margin/right = 381.0
margin/bottom = 62.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Versus Mode"
flat = true

[node name="settings" type="Button" parent="menu"]

visibility/self_opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 381.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = true

[node name="quit" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 99.0
margin/right = 381.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit Game"
flat = true

[node name="test_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 494.0
margin/top = 350.0
margin/right = 608.0
margin/bottom = 370.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "test"
flat = false

[connection signal="pressed" from="menu/versus" to="." method="_on_versus_pressed"]

[connection signal="pressed" from="menu/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="test_button" to="." method="_on_test_button_pressed"]


